--- a/publishers.html
+++ b/publishers.html
@@ -28,7 +28,7 @@ title: "Publishers : how to deal with the Superfeedr polling?"
 <h4>See Also</h4>
 <ul>
     <li><a href="http://gist.github.com/364100">List of our IPs</a></li>
-    <li><a href="http://blog.superfeedr.com/Atom/Best%20Practice/Feeds/RSS/feed-publishing-best-practices/">Feed publishing best practices</a></li>
+    <li><a href="http://blog.superfeedr.com/Feeds/RSS/Atom/Best%20Practice/feed-publishing-best-practices/">Feed publishing best practices</a></li>
     <li>Get in <a href="http://superfeedr.com/about">touch personally</a> with our team (<code>parser@superfeedr.com</code>)</li>
 </ul>
 
