--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@ layout: default
 title: Real-time cloudy thoughts from a super-hero
 ---
 
+<p style="font-size: 1.2em; padding: 20px 0px; text-align:center">We build a <a href="http://superfeedr.com">complex feed fetching and parsing infrastructure</a> so that you don't have to. We believe the web should be more open and that feeds are a key component of that ecosystem. <br /><input type="button" onclick="(function(){var z=document.createElement('script');z.src='https://www.subtome.com/load.js';document.body.appendChild(z);})()" value="Subscribe"> or read the <a href="/archive.html">archive</a>.
+
+</p>
+
+
+
 {% for post in site.posts limit:10 %}
     <h3><a href="{{ post.url }}">{{ post.title }}</a></h3>
     <p class="excerpt">
