--- a/frequently-asked-questions.html
+++ b/frequently-asked-questions.html
@@ -1,6 +1,6 @@
---- 
-layout: one_column 
-title: "Frequently Asked Questions" 
+---
+layout: one_column
+title: "Frequently Asked Questions"
 ---
 
 <h2>General</h2>
@@ -76,7 +76,7 @@ How come Superfeedr doesn't work with my IM client (Adium, Gajim, ...)? </h3>
 </p>
 <h3>What XMPP libraries is there in my language?</h3>
 <p>
-	 XMPP is a proven protocol with libraries in almost any language. Check<a href="http://xmpp.org/software/libraries.shtml"> this page to find out about XMPP libraires</a> in your favorite language. However, if you want to keep it simple, you can probably use one of <a href="http://groups.google.com/group/superfeedr/web/goog_1244436009972">our API wrappers</a> (they're OSS) so that you don't have to re-invent the wheel ;)
+	 XMPP is a proven protocol with libraries in almost any language. Check<a href="http://xmpp.org/software/libraries.shtml"> this page to find out about XMPP libraires</a> in your favorite language. However, if you want to keep it simple, you can probably use one of <a href="http://github.com/superfeedr">our API wrappers</a> (they're OSS) so that you don't have to re-invent the wheel ;)
 </p>
 <h3>
 Do I need to have an XMPP server running to use Superfeedr? Do I need to 'learn' XMPP? </h3>
