more link changing

--- a/pubsubhubbub.html
+++ b/pubsubhubbub.html
@@ -13,7 +13,7 @@ title: Superfeedr is PubSubHubbub with benefits
 
 <h3>No more polling</h3>
 <p>
-   Polling is an option. Polling is also hard to scale and there exists several technologies out there to determine when a given feed has been updated. <strong>Superfeedr implements a lot of them so you don't have too</strong>. <em>RSSCloud</em>, <em>SUP</em>, <em>XML-RPC</em> ping, <em>custom streaming APIs</em>? We've got you covered. We keep the complexity on our end and <strong>push content to you exactly as if it was all PubSubHubbub</strong>. You can also get <a href="http://superfeedr.com/documentation#xmpp_pubsub">content pushed to you with XMPP</a>.
+   Polling is an option. Polling is also hard to scale and there exists several technologies out there to determine when a given feed has been updated. <strong>Superfeedr implements a lot of them so you don't have too</strong>. <em>RSSCloud</em>, <em>SUP</em>, <em>XML-RPC</em> ping, <em>custom streaming APIs</em>? We've got you covered. We keep the complexity on our end and <strong>push content to you exactly as if it was all PubSubHubbub</strong>. You can also get <a href="http://documentation.superfeedr.com/subscribers.html#xmpppubsub">content pushed to you with XMPP</a>.
 </p>
 
 <h3>Data Normalization</h3>
