changed the link to http://push.superfeedr.com/

--- a/pubsubhubbub.html
+++ b/pubsubhubbub.html
@@ -8,7 +8,7 @@ title: Superfeedr is PubSubHubbub with benefits
 </p>
 
 <p>
-    <em>PubSubHubbub</em> is great, but we know that it doesn't solve all the problems. How do deal with the majority of feeds that are not PubSubHubbub yet? If you used <a href="http://superfeedr.com/hubbub">Superfeedr's default hub</a>, you can get notification from <strong>any feed</strong>.
+    <em>PubSubHubbub</em> is great, but we know that it doesn't solve all the problems. How do deal with the majority of feeds that are not PubSubHubbub yet? If you used <a href="http://push.superfeedr.com/">Superfeedr's default hub</a>, you can get notification from <strong>any feed</strong>.
 </p>
 
 <h3>No more polling</h3>
@@ -33,7 +33,7 @@ title: Superfeedr is PubSubHubbub with benefits
 
 <h2>Get started</h2>
 <p>
-    <a href="http://superfeedr.com/hubbub">Signup for Superfeedr</a>. The only you have to do is point to <code>http(s)://user:password@superfeedr.com/hubbub</code> for the hub url. Yes, <strong>that's it</strong>.
+    <a href="http://superfeedr.com/subscriber">Signup for Superfeedr</a>. The only you have to do is point to <code>http(s)://user:password@push.superfeedr.com</code> for the hub url. Yes, <strong>that's it</strong>.
 </p>
 
 
