--- a/publishers.html
+++ b/publishers.html
@@ -1,4 +1,5 @@
 ---
+layout: default
 title: "Publishers : how to deal with the Superfeedr polling?"
 ---
 
@@ -8,11 +9,11 @@ title: "Publishers : how to deal with the Superfeedr polling?"
 
 <p>We implement a lot of different techniques to avoid creating issues and we try to back-of when we see HTTP error codes, however there are a few things that you can implement on your side to decrease the load on your server.</p>
 
-<p>Please do not hesitate to get in <a href="http://superfeedr.com/about">touch personally</a> with our team (<code>parser@superfeedr.com</code>) if you have questions or need help.</p>
+<p>Please do not hesitate to <a href="http://superfeedr.com/about">get in  touch</a> with our team if you have questions or need help.</p>
 
 <h2>Setup a hub</h2>
 
-<p>This is obviously the <strong>best thing you can do</strong>. <a href="http://code.google.com/p/pubsubhubbub/">PubSubHubbub</a> is an <strong>open</strong> protocol implemented by a lot of great feed subscribers, including <a href="http://www.google.com">Google</a>, <a href="http://netvibes.com">Netvibes</a>, <a href="http://sixapart.com">SixApart</a>, <a href="http://facebook.com/">Facebook</a> (Friendfeed), <a href="http://twitterfeed.com/">Twitterfeed</a>... etc. </p>
+<p>This is obviously the <strong>best thing you can do</strong>. <a href="http://code.google.com/p/pubsubhubbub/">PubSubHubbub</a> is an <strong>open</strong> protocol implemented by a lot of great feed subscribers, including <a href="http://www.google.com">Google</a>, <a href="http://netvibes.com">Netvibes</a>, <a href="http://facebook.com/">Facebook</a> (Friendfeed), <a href="http://twitterfeed.com/">Twitterfeed</a>... etc. </p>
 <p>By setting up a hub, you <em>allow all these subscribers to get your content in realtime, without polling</em>.</p>
 <p><a href="http://superfeedr.com/publisher">Superfeedr host hubs</a> and it's free. You may want to look into that direction.</p>
 
@@ -26,8 +27,8 @@ title: "Publishers : how to deal with the Superfeedr polling?"
 
 <h4>See Also</h4>
 <ul>
-    <li><a href="http://gist.github.com/364100">List of our IPs</a></li>
-    <li><a href="http://blog.superfeedr.com/Feeds/RSS/Atom/Best%20Practice/feed-publishing-best-practices/">Feed publishing best practices</a></li>
-    <li>Get in <a href="http://superfeedr.com/about">touch personally</a> with our team (<code>parser@superfeedr.com</code>)</li>
+    <li><a href="http://documentation.superfeedr.com/misc.html#ip-list">List of our IPs</a></li>
+    <li><a href="http://blog.superfeedr.com/feeds/rss/atom/best%20practice/feed-publishing-best-practices/">Feed publishing best practices</a></li>
+    <li>Get in <a href="http://superfeedr.com/about">touch</a> with our team.</li>
 </ul>
 
