--- a/pubsubhubbub.html
+++ b/pubsubhubbub.html
@@ -1,13 +1,14 @@
 ---
+layout: default
 title: Superfeedr is PubSubHubbub with benefits
 ---
 
 <p>
-    It looks like you're a <strong>PubSubHubbub</strong> subscriber. You implemented this protocol in your app and you're now able to subscribe to feeds in realtime. <em>Superfeedr hosts many of these hubs</em>, like the one for <a href="http://tumblr.superfeedr.com/" title="tumblr pubsubhubbub">Tumblr</a>, <a href="http://posterous.superfeedr.com/" title="Posterous pubsubhubbub">Posterous</a>, or <a href="http://hub.gowalla.com/" title="Gowalla pubsubhubbub">Gowalla</a>.
+    It looks like you're a <strong>PubSubHubbub</strong> subscriber. You implemented this protocol in your app and you're now able to subscribe to feeds in realtime. <em>Superfeedr hosts many of these hubs</em>.
 </p>
 
 <p>
-    <em>PubSubHubbub</em> is great, but we know that it doesn't solve all the problems. How do deal with the majority of feeds that are not PubSubHubbub yet? If you used <a href="http://push.superfeedr.com/">Superfeedr's default hub</a>, you can get notification from <strong>any feed</strong>.
+    <em>PubSubHubbub</em> is great, but we know that it doesn't solve all the problems. How do deal with the majority of feeds that are not PubSubHubbub yet? If you used <a href="https://push.superfeedr.com/">Superfeedr's default hub</a>, you can get notification from <strong>any feed</strong>.
 </p>
 
 <h3>No more polling</h3>
@@ -17,18 +18,9 @@ title: Superfeedr is PubSubHubbub with benefits
 
 <h3>Data Normalization</h3>
 <p>
-    You actually already benefit from this, but <strong>Superfeedr does content normalization</strong>. You probably know it already, but it's a pain to get content in <em>so many different formats</em>, and often times <em>invalid</em>. Superfeedr deals with this complexity on your behalf. No matter the original format, we map this into some clean <strong>Atom</strong>, with a hint of <strong>georss</strong> for geo-location and <strong>ActivityStreams</strong> for any social web data.
+    You actually already benefit from this, but <strong>Superfeedr does content normalization</strong>. You probably know it already, but it's a pain to get content in <em>so many different formats</em>, and often times <em>invalid</em>. Superfeedr deals with this complexity on your behalf. No matter the original format, we map this into some clean <strong>Atom</strong>, with a hint of <strong>georss</strong> for geo-location and <strong>ActivityStreams</strong> for any social web data. We also <strong>normalize to JSON</strong> if you don't want to deal with XML at all.
 </p>
 
-<h3>Digest and Querying</h3>
-<p>
-    As any other Publish-Subscribe pattern, <em>PubSubHubbub fails silently</em>. Ever wondered what happens if the hub to which you subscribed died? On the other hand, what happens if, for some reason your app has been offline for a few hours? Don't worry, Superfeedr offers <strong>digest notifications</strong> which will guarantee you that you'll get content. You can also query Superfeedr to <strong>get the last 10 entries of a given feed</strong>. This way, you won't miss any data.
-</p>
-
-<h3>Track</h3>
-<p>
-    Sometimes, subscribing to a feed is not enough. You want to have <strong>any content that matches a keyword</strong>. Superfeedr does that. It's called track. You can get a notification with any entry that matches this keyword. Want to <em>monitor the number of mentions of your companies name, technologies that you use, compare popularity</em>? Track is for you.
-</p>
 
 <h2>Get started</h2>
 <p>
