omproving CSS by adding meta and improved layout a bit

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Blog
+description: "We blog about Superfeedr's features, how to parse RSS feeds with several web platforms, the open web and more!"
 ---
 
 {% for post in site.posts limit:10 %}
@@ -23,3 +24,11 @@ title: Blog
 </article>
 
 {% endfor %}
+
+<p>
+	Superfeedr's powerful unified Feed API simplifies how you handle RSS, Atom, or JSON feeds. Whether you publish or consume feeds, we streamline the notification process, saving you time and resources.
+</p>
+
+<p>
+	We blog about Superfeedr's features, how to parse RSS feeds with several web platforms, the open web and more!
+</p>
