--- a/publishers.html
+++ b/publishers.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: "Publishers : how to deal with the Superfeedr polling?"
+description: "Publishers : how to deal with the Superfeedr polling? Here are a couple tips on how to minimize Superfeedr's impact on your site."
 ---
 
 <p>Superfeedr is polling your feeds <strong>on behalf of other applications</strong>.</p>
