--- a/pubsubhubbub.html
+++ b/pubsubhubbub.html
@@ -1,6 +1,8 @@
 ---
 layout: default
 title: Superfeedr is PubSubHubbub with benefits
+description: "Superfeedr is PubSubHubbub with benefits. "
+
 ---
 
 <p>
